// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> props variant renders a longForm variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  line-height: 1.25;
  color: #0F0F10;
  font-size: 1rem;
}

<p
  className="emotion-0 emotion-1"
>
  Hello World
</p>
`;

exports[`<Paragraph /> props variant renders a tiny variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  line-height: 1.25;
  color: #5B5D61;
  font-size: 0.75rem;
}

<p
  className="emotion-0 emotion-1"
>
  Hello World
</p>
`;

exports[`<Paragraph /> props variant renders a ui variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  line-height: 1.25;
  color: #0F0F10;
  font-size: 0.875rem;
}

<p
  className="emotion-0 emotion-1"
>
  Hello World
</p>
`;
